v2.0.x-SNAPSHOT/connectors/database/deltalake.mdx
---
title: DeltaLake Connector | OpenMetadata Data Lake Integration
description: Connect OpenMetadata to Delta Lake with our comprehensive database connector guide. Step-by-step setup, configuration, and metadata extraction instructions.
sidebarTitle: Overview
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.0.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/delta-lake.webp'
name="Delta Lake"
stage="PROD"
availableFeatures={["Metadata", "dbt"]}
unavailableFeatures={["Query Usage", "Data Profiler", "Data Quality", "Lineage", "Column-level Lineage", "Owners", "Tags", "Stored Procedures", "Sample Data", "Auto-Classification"]} />
In this section, we provide guides and references to use the Delta Lake connector.
Configure and schedule Delta Lake metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [dbt Integration](/v2.0.x-SNAPSHOT/connectors/database/dbt)
- [Troubleshooting](/v2.0.x-SNAPSHOT/connectors/database/deltalake/troubleshooting)

## Requirements

Delta Lake requires to run with Python 3.9, 3.10 or 3.11. We do not yet support the Delta connector for Python 3.11.

The Delta Lake connector is able to extract the information from a **metastore** or directly from the **storage**.
If extracting directly from the storage, some extra requirements are needed depending on the storage.

### S3 Permissions

To execute metadata extraction AWS account should have enough access to fetch required data. The <strong>Bucket Policy</strong> in AWS requires at least these permissions:
```json
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Effect": "Allow",
            "Action": [
                "s3:GetObject",
                "s3:ListBucket"
            ],
            "Resource": [
                "arn:aws:s3:::<my bucket>",
                "arn:aws:s3:::<my bucket>/*"
            ]
        }
    ]
}
```

## Metadata Ingestion

To ingest metadata from Delta Lake, you need to create a service connection. The service connects Delta Lake with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **DeltaLake** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/deltalake.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other Delta Lake services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/deltalake.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for Delta Lake. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/deltalake.png)

**Connection Details for MetastoreConfig**
- **Metastore Host Port**: Enter the Host & Port of Hive Metastore Service to configure the Spark Session. Either
  of `metastoreHostPort`, `metastoreDb` or `metastoreFilePath` is required.
- **Metastore File Path**: Enter the file path to local Metastore in case Spark cluster is running locally. Either
  of `metastoreHostPort`, `metastoreDb` or `metastoreFilePath` is required.
- **Metastore DB**: The JDBC connection to the underlying Hive metastore DB. Either
  of `metastoreHostPort`, `metastoreDb` or `metastoreFilePath` is required.
- **appName (Optional)**: Enter the app name of spark session.
- **Connection Arguments (Optional)**: Key-value pairs used to pass extra `config` elements to the Spark Session builder.

OpenMetadata internally runs `pyspark` 3.X and `delta-lake` 2.0.0, so Spark configuration options must target 3.X.

**Metastore Host Port**

When connecting to an external metastore using the `Metastore Host Port` parameter, OpenMetadata prepares a Spark Session with the following configuration:
```
.config("hive.metastore.uris", "thrift://{connection.metastoreHostPort}")
```
OpenMetadata then uses the `catalog` functions from the Spark Session to pick up the metadata exposed by the Hive Metastore.

**Metastore File Path**

If a local file path contains the metastore information instead (for example, for local testing with the default `metastore_db` directory), set the following:
```
.config("spark.driver.extraJavaOptions", "-Dderby.system.home={connection.metastoreFilePath}")
```
This updates the `Derby` information. For more information, see this [Stack Overflow thread](https://stackoverflow.com/questions/38377188/how-to-get-rid-of-derby-log-metastore-db-from-spark-shell).
- For all supported configurations, see the [Spark configuration documentation](https://spark.apache.org/docs/latest/configuration.html).
- For more information about the Hive metastore, see the [Spark Hive tables documentation](https://spark.apache.org/docs/latest/sql-data-sources-hive-tables.html)
  and *The Internals of Spark SQL* [book](https://jaceklaskowski.gitbooks.io/mastering-spark-sql/content/spark-sql-hive-metastore.html).

**Metastore Database**

Connect to the metastore directly by pointing to the Hive Metastore db, for example, `jdbc:mysql://localhost:3306/demo_hive`.
This requires the common database settings (url, username, password) and the driver class name for the JDBC metastore.
Provide the driver to the ingestion image and pass the `classpath` used in the Spark Configuration under `spark.driver.extraClassPath`.

**Connection Details for StorageConfig - S3**
- **AWS Access Key ID** & **AWS Secret Access Key**: When you interact with AWS, you specify your AWS security credentials to verify who you are and whether you have
  permission to access the resources that you are requesting. AWS uses the security credentials to authenticate and
  authorize your requests ([docs](https://docs.aws.amazon.com/IAM/latest/UserGuide/security-creds.html)).
  Access keys consist of two parts: An **access key ID** (for example, `AKIAIOSFODNN7EXAMPLE`), and a **secret access key** (for example, `wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY`).
  You must use both the access key ID and secret access key together to authenticate your requests.
  You can find further information on how to manage your access keys [here](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html).
- **AWS Region**: Each AWS Region is a separate geographic area in which AWS clusters data centers ([docs](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.RegionsAndAvailabilityZones.html)).
  As AWS can have instances in multiple regions, we need to know the region the service you want to reach belongs to.
  Note that the AWS Region is the only required parameter when configuring a connection. When connecting to the
  services programmatically, there are different ways in which we can extract and use the rest of AWS configurations.
  You can find further information about configuring your credentials [here](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/credentials.html#configuring-credentials).
- **AWS Session Token (optional)**: If you are using temporary credentials to access your services, you will need to inform the AWS Access Key ID
  and AWS Secrets Access Key. Also, these will include an AWS Session Token.
  You can find more information on [Using temporary credentials with AWS resources](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp_use-resources.html).
- **Endpoint URL (optional)**: To connect programmatically to an AWS service, you use an endpoint. An *endpoint* is the URL of the
  entry point for an AWS web service. The AWS SDKs and the AWS Command Line Interface (AWS CLI) automatically use the
  default endpoint for each service in an AWS Region. But you can specify an alternate endpoint for your API requests.
  Find more information on [AWS service endpoints](https://docs.aws.amazon.com/general/latest/gr/rande.html).
- **Profile Name**: A named profile is a collection of settings and credentials that you can apply to an AWS CLI command.
  When you specify a profile to run a command, the settings and credentials are used to run that command.
  Multiple named profiles can be stored in the config and credentials files.
  You can inform this field if you'd like to use a profile other than `default`.
  Find here more information about [Named profiles for the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-profiles.html).
- **Assume Role Arn**: Typically, you use `AssumeRole` within your account or for cross-account access. In this field you'll set the
  `ARN` (Amazon Resource Name) of the policy of the other account.
  A user who wants to access a role in a different account must also have permissions that are delegated from the account
  administrator. The administrator must attach a policy that allows the user to call `AssumeRole` for the `ARN` of the role in the other account.
  This is a required field if you'd like to `AssumeRole`.
  Find more information on [AssumeRole](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html).
- **Assume Role Session Name**: An identifier for the assumed role session. Use the role session name to uniquely identify a session when the same role
  is assumed by different principals or for different reasons.
  By default, OpenMetadata uses the name `OpenMetadataSession`.
  Find more information about the [Role Session Name](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=An%20identifier%20for%20the%20assumed%20role%20session.).
- **Assume Role Source Identity**: The source identity specified by the principal that is calling the `AssumeRole` operation. You can use source identity
  information in AWS CloudTrail logs to determine who took actions with a role.
  Find more information about [Source Identity](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=Required%3A%20No-,SourceIdentity,-The%20source%20identity).

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, and Table sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

<Related />
